fix partners-page__partner style on mobile

--- a/app/assets/stylesheets/components/partners-page.scss
+++ b/app/assets/stylesheets/components/partners-page.scss
@@ -3,10 +3,11 @@
   padding-top: vr(2);
 
   @include e(partner) {
+    border-bottom: solid 1px $border--title;
+
     @include only-desktop {
       @include outer-container;
       padding: vr(2);
-      border-bottom: solid 1px $border--title;
 
       &:nth-child(2n+1) {
         clear: left;
@@ -16,6 +17,8 @@
 
     @include only-mobile {
       @include span-columns(12);
+      padding-bottom: vr(1.5);
+      margin-bottom: vr(3);
     }
   }
 }
